GitVersion1/objects/FieldSets_Setting__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Dynamic Field Set</description>
    <fields>
        <fullName>Business_Unit__c</fullName>
        <label>Business Unit</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Calculation_Method__c</fullName>
        <description>All,
Sales Volume Estimate (# Animals Fed),
Simple Potential Estimate,
Daily Animal Consumption,
Sales Volume Estimate (Simplified),
Cycle Consumption</description>
        <label>Calculation Method</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieldSet_Name__c</fullName>
        <label>FieldSet Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Index__c</fullName>
        <description>FieldSet Display Order on a specified object</description>
        <label>Index</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OMS__c</fullName>
        <label>For Other Market Segment?</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Object__c</fullName>
        <label>Object</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Segment__c</fullName>
        <label>Segment</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>Edit or View</description>
        <label>Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Used_In__c</fullName>
        <description>Where the Field Set is being used</description>
        <label>Used In</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>FieldSets Setting</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Business_Unit__c</columns>
        <columns>Calculation_Method__c</columns>
        <columns>FieldSet_Name__c</columns>
        <columns>Type__c</columns>
        <columns>OMS__c</columns>
        <columns>Segment__c</columns>
        <columns>Index__c</columns>
        <columns>Object__c</columns>
        <columns>Used_In__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
</CustomObject>